# travel_assistant

./: .gitignore  CLAUDE.md  README.md  graph.py  llm.py  main.py  pyproject.toml  schemas.py  state.py
assistants/itinerary_assistant/: __init__.py  graph.py  state.py
assistants/itinerary_assistant/nodes/: __init__.py  generate_itinerary_node.py  utils.py
assistants/preferences_assistant/: __init__.py  graph.py  state.py  tools.py
assistants/preferences_assistant/nodes/: __init__.py  ask_followup_node.py  check_complete_node.py  extract_intent_node.py  utils.py
assistants/weather_practical_info_assistant/: state.py
assistants/weather_practical_info_assistant/utils/: __init__.py  city_utils.py  weather_utils.py
supervisor/error/: __init__.py  error_handler_node.py
supervisor/nodes/: call_itinerary_node.py  call_preferences_node.py  call_weather_node.py  parallel_query_node.py  supervisor_node.py
supervisor/query/: __init__.py  attractions_query_node.py  weather_query_node.py
utils/: __init__.py
utils/amap_utils/: __init__.py  amap_utils.py
utils/weather_utils/: __init__.py  jwt_utils.py  state.py  weather_utils.py
